Hud emitter, fix hud parser